src/main/java/com/example/project_telegram_bot/error/RandomSentenceNotFoundException.java
package com.example.project_telegram_bot.error;

public class RandomSentenceNotFoundException extends RuntimeException {
    public RandomSentenceNotFoundException(String message) {
        super(message);
    }

    public RandomSentenceNotFoundException(String message, Throwable cause) {
        super(message, cause);
    }
}



